k8s/kustomize/base/db/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallet-db-service
spec:
  type: NodePort
  selector:
    app: wallet-service-db
  ports:
    - name: "postgres"
      protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 30432
