k8s/kustomize/base/db/network-policy.yaml
# Only allow the Web layer to access the DB layer
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-db-from-web
spec:
  podSelector:
    matchLabels:
      app: wallet-service-db
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: wallet-service
